--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17"
   }
 }
