--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "axios": "^1.9.0",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
