--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "axios": "^1.9.0",
+    "compression": "^1.8.1",
+    "express": "^5.1.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
