--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "tailwindcss": "^3.4.17",
     "axios": "^1.9.0",
     "compression": "^1.8.1",
     "express": "^5.1.0",
@@ -26,7 +27,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "postcss": "^8.5.4",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
 }
